<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_image" />

    <ImageView
        android:id="@+id/ivMic"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_mic_off"
        app:layout_constraintBottom_toBottomOf="@id/ivProfilePic"
        app:layout_constraintEnd_toEndOf="@id/ivProfilePic"
        android:contentDescription="@string/mic_button" />

    <ImageView
        android:id="@+id/ivBadge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/ic_host_badge"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/ivProfilePic"
        app:layout_constraintTop_toTopOf="@id/tvName"
        android:visibility="gone"
        android:contentDescription="@string/host_badge" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/ivProfilePic"
        app:layout_constraintStart_toEndOf="@id/ivBadge"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePic"
        tools:text="Kshitij Kumar"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        tools:text="होस्ट"
        android:layout_marginTop="4dp"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>